# ROB4-projet_indus

./: CMakeLists.txt  Makefile  README.md  config.txt
docking/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
docking/src/: main_docking.cpp
lidar/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lidar/src/: main_lidar.cpp  sdkcommon.h
lidar/src/arch/linux/: net_serial.cpp  timer.h
lidar/src/hal/: abs_rxtx.h  thread.h
mapping/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mapping/hdr/: my_function.h  thread.h
mapping/src/: main_mapping.cpp  my_function.cpp  thread.cpp
navigation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
navigation/src/: main_navigation.cpp
roomba/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
roomba/hdr/: Roomba.h  common.h  thread.h
roomba/src/: Roomba.cpp  common.cpp  main_roomba.cpp  thread.cpp
ros/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
ros/hdr/: Config.hpp  Fifo.hpp  Node.hpp  Port.hpp
ros/src/: Config.cpp  Fifo.cpp  Main.cpp  Node.cpp  Port.cpp
suivi_trajectoire/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
suivi_trajectoire/src/: main_suiv.cpp
utilisateur/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
utilisateur/hdr/: keyInteraction.h
utilisateur/src/: keyInteraction.cpp  main_usr.cpp
